# i16_peakfit

./: README.md  find_peaks_example.py  lmfit_example.py  main.py  peakfit_example.py  pyproject.toml
example_peaks/: 794933.nxs  794934.nxs  794936.nxs  Scan_387091_eta_roi1_sum.csv  Scan_387270_eta_roi1_sum.csv  Scan_387276_eta_roi1_sum.csv  Scan_387282_eta_roi1_sum.csv  Scan_387283_eta_roi1_sum.csv  Scan_387288_eta_roi1_sum.csv  Scan_387294_eta_roi1_sum.csv  Scan_387295_eta_roi1_sum.csv  Scan_387301_eta_roi1_sum.csv  Scan_393793_eta_roi1_sum.csv  Scan_393874_eta_roi1_sum.csv  Scan_393922_eta_roi1_sum.csv  Scan_393931_eta_roi1_sum.csv  Scan_393940_eta_roi1_sum.csv  Scan_393973_eta_roi1_sum.csv  Scan_393976_eta_roi1_sum.csv  Scan_393977_eta_roi1_sum.csv  Scan_394683_eta_roi6_sum.csv  Scan_394687_eta_roi6_sum.csv  Scan_394691_eta_roi6_sum.csv  Scan_394695_eta_roi6_sum.csv  Scan_571649_l_roi1_sum.csv  Scan_571654_l_roi1_sum.csv  Scan_794932_eta_roi2_sum.csv  Scan_794933_eta_roi2_sum.csv  Scan_794934_eta_roi2_sum.csv  Scan_794935_eta_roi2_sum.csv  Scan_794936_eta_roi2_sum.csv  Scan_794937_eta_roi2_sum.csv  Scan_794938_eta_roi2_sum.csv  Scan_794939_eta_roi2_sum.csv  Scan_794940_eta_roi2_sum.csv  Scan_794941_eta_roi2_sum.csv  Scan_794942_eta_roi2_sum.csv  Scan_794943_eta_roi2_sum.csv  Scan_794944_eta_roi2_sum.csv  Scan_794945_eta_roi2_sum.csv  (+1 more)
i16_peakfit/: __init__.py  __main__.py  fitting.py  fitting2d.py  functions.py  nexus_loader.py  peak_finding.py  plotting.py  tk_widgets.py  tkbatch_gui.py  tkinter_gui.py  tkmodelpars.py  tknexus_selector.py
